tests/ui/match-mixed-unstable.stderr
error: trivially_copy_pass_by_ref should sort before useless_let_if_seq
 --> $DIR/match-mixed-unstable.rs:8:5
  |
8 |     #[sorted]
  |     ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `sorted` (in Nightly builds, run with -Z macro-backtrace for more info)
